# template-api

./: .gitignore  Dockerfile  GitVersion.yml  README.md  alembic.ini  app.ini  app.py  docker-compose.dev.yml  docker-compose.yml  interact.sh  pyproject.toml  wsgi.py
alembic/: env.py
alembic/versions/: 8e9d2dd2e8e8_.py
e2e/: e2e_test.py
migrations/: __init__.py  autogenerate_migration_revision.py  env.py
migrations/versions/: 8e9d2dd2e8e8_initial.py
scripts/: bump-version.sh  docker-compose.dev.yml  docker-compose.e2e.yml  e2e.sh  interact.sh  test-continuous.sh  test-unit.sh
src/: app.py  bind.py  model.py  settings.py
test/: conftest.py  test_bind.py  test_model.py
test/test_app/: test_model.py
test/test_e2e/: test_e2e.py
test/test_migrations/: test_alembic.py
