[tool.poetry]
name = "example"
version = "0.1.0"
description = "starting point for web app"
authors = ["Allen Lawrence"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
psycopg2 = "~2.7"
sqlalchemy = "^1.3"
alembic = "^1.0"
uwsgi = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
pytest-testmon = "^0.9.16"
pytest-watch = "^4.2"
requests = "^2.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
