[tool.poetry]
name = "example"
version = "0.1.0"
description = "starting point for web app"
authors = ["Allen Lawrence"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
psycopg2-binary = "^2.8"
sqlalchemy = "^1.3"
structlog = "^19.1"
alembic = "^1.4.0"
uwsgi = "^2.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.0"
pytest-cov = "^2.7"
pytest-testmon = "^0.9.16"
pytest-watch = "^4.2"
requests = "^2.22"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
testpaths = [
    "test/test_app"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
